# py-movie-api

./: .env  .env.example  .flake8  .gitignore  README.md  checklist.md  cinema_api_db_data.json  cinema_service_db_data.json  cinema_serviсe_db_data.json  db.sqlite3  manage.py  pyproject.toml  regirements.txt  requirements  requirements.txt  requirements.xtx  requirments.txt  requrements.txt
CinemaHall/: asgi.py  settings.py  urls.py  wsgi.py
Django/: settings.py  urls.py
Movie/: settings.py  urls.py
MovieAPI/: asgi.py  settings.py  urls.py  wsgi.py
Movie_API/: asgi.py  serializers.py  settings.py  urls.py  wsgi.py
add/: asgi.py  settings.py  urls.py  wsgi.py
api/: settings.py  urls.py
app/: asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
cinema/: admin.py  apps.py  asgi.py  midels.py  models.py  serialalizers.py  serialiazers.py  serializer.py  serializers.py  serializes.py  seriallizers.py  serilizers.py  settings.py  sirealizers.py  tests.py  urls.py  views.py  wsgi.py
cinema-hall/: asgi.py  settings.py  urls.py  wsgi.py
cinema=core/: settings.py
cinema_api/: asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
cinema_api_project/: asgi.py  settings.py  urls.py  wsgi.py
cinema_app/: asgi.py  settings.py  urls.py  wsgi.py
cinema_config/: asgi.py  settings.py  urls.py  wsgi.py
cinema_core/: settings.py  urls.py  wsgi.py
cinema_hall/: asgi.py  settings.py  urls.py  wsgi.py
cinema_mate/: manage.py
cinema_pr/: asgi.py  settings.py  urls.py  wsgi.py
cinema_proj/: asgi.py  settings.py  (+2 more)
(+294 files in other folders)
