[tool.poetry]
name = "movie-api"
version = "0.1.0"
description = ""
authors = ["Dmitry Ivanov <karward94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
namespace = "^0.1.4"
movies = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
